fixed weird spacing

--- a/server/public/css/register.css
+++ b/server/public/css/register.css
@@ -1,4 +1,6 @@
-
+.padtop {
+	top: 200px;
+}
 
 .spacing {
 	padding-top: 20px;
